manifests/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false" 
    certmanager.k8s.io/issuer: "letsencrypt-test-cluster-issuer"
    certmanager.k8s.io/acme-challenge-type: http01
spec:
  tls:
  - hosts:
    - test.alpinresorts.online
    secretName: letsencrypt-test-domain-certificate
  rules:
  - host: test.alpinresorts.online
    http:
      paths:
      - path: /
        backend:
          serviceName: ${var.app_name}
          servicePort: 80
  - http:
      paths:
      - path: /
        backend:
          serviceName: ${var.app_name}
          servicePort: 80
